clase offset que faltaba

--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>KaneTheme</title>
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+  
+  <section class="container">
+        <div class="row">
+            <div class="col-3">
+                a
+            </div>
+            <div class="col-3">
+                b
+            </div>
+            <div class="col-3">
+                c
+            </div>
+            <div class="col-3">
+                d
+            </div>
+        </div> 
+  </section>
    
    
    
