--- a/index.html
+++ b/index.html
@@ -7,27 +7,42 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+<!--Inicia Seccion 1 Nav Claus -->
   
-  <section class="container">
-        <div class="row">
-            <div class="col-3">
-                a
-            </div>
-            <div class="col-3">
-                b
-            </div>
-            <div class="col-3">
-                c
-            </div>
-            <div class="col-3">
-                d
-            </div>
-        </div> 
-  </section>
-   
-   
-   
-   
+<!--Termina Seccion 1 Nav Claus -->
+  
+<!--Inicia Seccion 2 Imagenes Silvana -->
+  
+<!--Termina Seccion 2 Imagenes Silvana -->
+
+<!--Inicia Seccion 3 Colores Karla -->
+  
+<!--Termina Seccion 3 Colores Karla -->  
+  
+<!--Inicia Seccion 4 Colores Mone -->
+  
+<!--Termina Seccion 4 Colores Mone -->     
+
+<!--Inicia Seccion 5 What we do Erandy -->
+  
+<!--Termina Seccion 5 What we do Erandy -->
+
+ <!--Inicia Seccion 6 Prices Shazil -->
+     
+  
+<!--Termina Seccion 6 Prices Shazil -->    
+ 
+ <!--Inicia Seccion 6 texto y formulario Yessy -->
+  
+<!--Termina Seccion 6 texto y formulario Yessy-->   
+
+<!--Inicia Seccion 7  Imagenes trigo Silvana -->
+  
+<!--Termina Seccion 7 Imagenes trigo Silvana -->
+
+<!--Inicia Seccion 8  footer Clau -->
+  
+<!--Termina Seccion 8 footer Clau -->   
    
    
     <script src="assets/js/jquery-3.2.1.min.js"></script>
