subiendo estructura html de about us

--- a/index.html
+++ b/index.html
@@ -19,9 +19,26 @@
   
 <!--Termina Seccion 3 Colores Karla -->  
   
-<!--Inicia Seccion 4 Colores Mone -->
+<!--Inicia Seccion 4 About Us Mone -->
+ <section class=" aboutUscontainer">
+    <div class="row">
+        <div class="col-4 offset-4">
+           <h2>ABOUT US</h2>
+           <div class="linea"></div>            
+        </div>
+    </div> 
+    <div class="row">
+        <div class="col-4 offset-2">
+            <p></p>
+            <div class="barras"></div>
+        </div>
+        <div class="col-4 ">
+            <img src="assets/img/agency-img3.jpg" alt="">
+        </div>
+    </div>    
+ </section>
   
-<!--Termina Seccion 4 Colores Mone -->     
+<!--Termina Seccion 4 About Us Mone -->     
 
 <!--Inicia Seccion 5 What we do Erandy -->
   
