clases de titulos, subtitulos, textos y center listas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>KaneTheme</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+    
 </head>
 <body>
 <!--Inicia Seccion 1 Nav Claus -->
