--- a/index.html
+++ b/index.html
@@ -47,7 +47,21 @@
 <!--Termina Seccion 5 What we do Erandy -->
 
  <!--Inicia Seccion 6 Prices Shazil -->
-     
+          <section class="container">
+       <div class="row prices">
+                <p class="col-12 prices__titulo">BEST PRICE GUARANTEED</p>
+                <div class="prices__separadorCont col-7 offset-5">
+                    <hr class="prices__separadorCont--linea col-3">
+                </div>
+                <div>
+                <p class="prices__texto col-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+                 <div class="col-3">a</div>
+                 <div class="col-3">b</div>
+                 <div class="col-3">c</div>
+                 <div class="col-3">d</div>
+       </div>  
+     </section>
   
 <!--Termina Seccion 6 Prices Shazil -->    
  
