--- a/index.html
+++ b/index.html
@@ -52,36 +52,41 @@
 <!--Termina Seccion 6 Prices Shazil -->    
  
 <!--Inicia Seccion 6 texto y formulario Yessy -->
-    <section class="parrafos container">
+    <section class="parrafos container centerGrid">
         <div class="row">
-            <div class="col-8 offset-2 titulo">
-                <h1>What your clients says</h1>
+            <div class="col-12 centerGrid">
+                <h1 class="titulo">What your clients says</h1>
             </div>
         </div>
         <div class="linea"></div>
         <div class="row">
-            <div class="col-12 subtitulo">
-                <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
+            <div class="col-12">
+                <h2 class="subtitulo">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
             </div>
         <div class="row">
-            <p class="col">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ut, fuga architecto, autem libero neque quam obcaecati quaerat, incidunt nostrum, unde laborum aliquam et. Eveniet animi reiciendis ratione pariatur voluptate.
+            <p class="col-4 offset-4 parrafos_texto">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ut, fuga architecto, autem libero neque quam obcaecati quaerat, incidunt nostrum, unde laborum aliquam et. Eveniet animi reiciendis ratione pariatur voluptate. <br>
+                <span class="parrafos_texto--amarillo">-Automotive Company</span>
             </p>
         </div>
         <div class="row">
-            <p class="col">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ut, fuga architecto, autem libero neque quam obcaecati quaerat, incidunt nostrum, unde laborum aliquam et. Eveniet animi reiciendis ratione pariatur voluptate.
+            <p class="col-4 offset-4 parrafos_texto">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ut, fuga architecto, autem libero neque quam obcaecati quaerat, incidunt nostrum, unde laborum aliquam et. Eveniet animi reiciendis ratione pariatur voluptate. <br>
+                <span class="parrafos_texto--amarillo">-Automotive Company</span>
             </p>
+
         </div>
         <div class="row">
-            <p class="col">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ut, fuga architecto, autem libero neque quam obcaecati quaerat, incidunt nostrum, unde laborum aliquam et. Eveniet animi reiciendis ratione pariatur voluptate.
+            <p class="col-4 offset-4 parrafos_texto">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ut, fuga architecto, autem libero neque quam obcaecati quaerat, incidunt nostrum, unde laborum aliquam et. Eveniet animi reiciendis ratione pariatur voluptate. <br>
+                <span class="parrafos_texto--amarillo">-Automotive Company</span>
             </p>
+         
         </div>
     </section>
-    <section class="formulario container">
+    <section class="formulario container centerGrid">
         <div class="row">
-            <div class="col-12 titulo">
+            <div class="col-12">
                 <h1 class="titulo">GET IN TOUCH</h1>
             </div>
         </div>
@@ -91,13 +96,14 @@
             <h2 class="subtitulo">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
         </div>
         <div class="row">
-        <form class="col">
-            <input type="text" placeholder="Name*">
-            <input type="text" placeholder="Email*">
-            <input type="text" placeholder="Phone*">
-            <textarea placeholder="Message*"></textarea>
+        <form class="col-4 offset-4 datos">
+            <input class="datos_input" type="text" placeholder=" Name*">
+            <input class="datos_input" type="text" placeholder=" Email*">
+            <input class="datos_input" type="text" placeholder=" Phone*">
+            <textarea class="datos_input datos_input--textarea" placeholder=" Message*"></textarea>
+            <button class="boton">submit</button>            
         </form>
-        <button class="button">submit</button>
+
         </div>
         <p>*Required</p>
     </section>    
