about us BEM completo

--- a/index.html
+++ b/index.html
@@ -2,68 +2,109 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KaneTheme</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    
+
 </head>
+
 <body>
-<!--Inicia Seccion 1 Nav Claus -->
-  
-<!--Termina Seccion 1 Nav Claus -->
-  
-<!--Inicia Seccion 2 Imagenes Silvana -->
-  
-<!--Termina Seccion 2 Imagenes Silvana -->
+    <!--Inicia Seccion 1 Nav Claus -->
 
-<!--Inicia Seccion 3 Colores Karla -->
-  
-<!--Termina Seccion 3 Colores Karla -->  
-  
-<!--Inicia Seccion 4 About Us Mone -->
- <section class=" aboutUscontainer">
-    <div class="row">
-        <div class="col-4 offset-4">
-           <h2>ABOUT US</h2>
-           <div class="linea"></div>            
+    <!--Termina Seccion 1 Nav Claus -->
+
+    <!--Inicia Seccion 2 Imagenes Silvana -->
+
+    <!--Termina Seccion 2 Imagenes Silvana -->
+
+    <!--Inicia Seccion 3 Colores Karla -->
+
+    <!--Termina Seccion 3 Colores Karla -->
+
+    <!--Inicia Seccion 4 About Us Mone -->
+    <section class=" aboutUs container">
+        <div class="row">
+            <div class="aboutUs__divContendorDirecto centerGrid col-4 offset-4">
+                <h2 class="titulo ">ABOUT US</h2>
+                <div class="row">
+                    <div class="col-8 offset-2">
+                        <div class="aboutUs__divContendorDirecto aboutUs__divContendorDirecto--linea"></div>
+                    </div>
+                </div>
+
+            </div>
         </div>
-    </div> 
-    <div class="row">
-        <div class="col-4 offset-2">
-            <p></p>
-            <div class="barras"></div>
+        <div class="row">
+            <div class="aboutUs__divContendorDirecto col-4 offset-2">
+                <p class="texto">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est odio, quam, labore fugiat rerum deserunt doloremque atque reiciendis ipsum in eaque fuga voluptates recusandae iusto. Repellat expedita, doloremque fuga unde.
+                </p>
+                <p class="texto">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est odio, quam, labore fugiat rerum deserunt doloremque atque reiciendis ipsum in eaque fuga voluptates recusandae iusto. Repellat expedita, doloremque fuga unde
+                </p>
+                <div class="aboutUs__divContendorDirecto--barras">
+                    <div class="contenedor3barras">
+                        <div class="contenedor3barras contenedor3barras__barraLarga col-12">
+                            <div class="contenedor3barras contenedor3barras__barraLarga contenedor3barras__barraLarga__barraPorcentaje contenedor3barras__barraLarga__barraPorcentaje--porcentajeHTML col-11"></div>
+                        </div>
+                        <p>HTML</p>
+                    </div>
+                    <div class="contenedor3barras">
+                        <div class="contenedor3barras contenedor3barras__barraLarga col-12">
+                            <div class="contenedor3barras contenedor3barras__barraLarga contenedor3barras__barraLarga__barraPorcentaje contenedor3barras__barraLarga__barraPorcentaje--porcentajeCSS col-11"></div>
+                        </div>
+                        <p>CSS</p>
+                    </div>
+                    <div class="contenedor3barras">
+                        <div class="contenedor3barras contenedor3barras__barraLarga col-12">
+                            <div class="contenedor3barras contenedor3barras__barraLarga contenedor3barras__barraLarga__barraPorcentaje contenedor3barras__barraLarga__barraPorcentaje--porcentajeJAVASCRIPT col-11"></div>
+                        </div>
+                        <p>JAVASCRIPT</p>
+                    </div>
+                    <div class="contenedor3barras">
+                        <div class="contenedor3barras contenedor3barras__barraLarga col-12">
+                            <div class="contenedor3barras contenedor3barras__barraLarga contenedor3barras__barraLarga__barraPorcentaje contenedor3barras__barraLarga__barraPorcentaje--porcentajePHP col-11"></div>
+                        </div>
+                        <p>PHP</p>
+                    </div>
+                    <div class="contenedor3barras">
+                        <div class="contenedor3barras contenedor3barras__barraLarga col-12">
+                            <div class="contenedor3barras contenedor3barras__barraLarga contenedor3barras__barraLarga__barraPorcentaje contenedor3barras__barraLarga__barraPorcentaje--porcentajePHOTOSHOP col-11"></div>
+                        </div>
+                        <p>PHOTOSHOP/ILLUSTRATOR</p>
+                    </div>
+                </div>
+            </div>
+            <div class="aboutUs__divContendorDirecto col-4 ">
+                <img class="aboutUs__divContendorDirecto--img" src="assets/img/agency-img3.jpg" alt="">
+            </div>
         </div>
-        <div class="col-4 ">
-            <img src="assets/img/agency-img3.jpg" alt="">
-        </div>
-    </div>    
- </section>
-  
-<!--Termina Seccion 4 About Us Mone -->     
+    </section>
+    <!--Termina Seccion 4 About Us Mone -->
 
-<!--Inicia Seccion 5 What we do Erandy -->
-  
-<!--Termina Seccion 5 What we do Erandy -->
+    <!--Inicia Seccion 5 What we do Erandy -->
 
- <!--Inicia Seccion 6 Prices Shazil -->
-     
-  
-<!--Termina Seccion 6 Prices Shazil -->    
- 
- <!--Inicia Seccion 6 texto y formulario Yessy -->
-  
-<!--Termina Seccion 6 texto y formulario Yessy-->   
+    <!--Termina Seccion 5 What we do Erandy -->
 
-<!--Inicia Seccion 7  Imagenes trigo Silvana -->
-  
-<!--Termina Seccion 7 Imagenes trigo Silvana -->
+    <!--Inicia Seccion 6 Prices Shazil -->
 
-<!--Inicia Seccion 8  footer Clau -->
-  
-<!--Termina Seccion 8 footer Clau -->   
-   
-   
+
+    <!--Termina Seccion 6 Prices Shazil -->
+
+    <!--Inicia Seccion 6 texto y formulario Yessy -->
+
+    <!--Termina Seccion 6 texto y formulario Yessy-->
+
+    <!--Inicia Seccion 7  Imagenes trigo Silvana -->
+
+    <!--Termina Seccion 7 Imagenes trigo Silvana -->
+
+    <!--Inicia Seccion 8  footer Clau -->
+
+    <!--Termina Seccion 8 footer Clau -->
+
+
     <script src="assets/js/jquery-3.2.1.min.js"></script>
 </body>
 </html>
