creando las secciones de Trigo y redes sociales

--- a/index.html
+++ b/index.html
@@ -6,29 +6,37 @@
     <title>KaneTheme</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    
+
 </head>
 <body>
 <!--Inicia Seccion 1 Nav Claus -->
-  
+
 <!--Termina Seccion 1 Nav Claus -->
-  
+
 <!--Inicia Seccion 2 Imagenes Silvana -->
-  
+    <section id="imagen" class="seccion1">
+      <div class="container">
+        <div class="row centerGrid">
+          <h2 class="titulo col-12 ">BEAUTIFUL COLOR PALETTES FOR YOU <br>NEXT WEB PROJECT</h2>
+          <h4>Choosing the right color scheme is essenctial to your website's success. Your layout and other design choices -including font- should be developed in concert with you color scheme to ensure readability, cohesiveness and beauty in the final product.</h4>
+        </div>
+      </div>
+    </section>
+
 <!--Termina Seccion 2 Imagenes Silvana -->
 
 <!--Inicia Seccion 3 Colores Karla -->
-  
-<!--Termina Seccion 3 Colores Karla -->  
-  
+
+<!--Termina Seccion 3 Colores Karla -->
+
 <!--Inicia Seccion 4 About Us Mone -->
  <section class=" aboutUscontainer">
     <div class="row">
         <div class="col-4 offset-4">
            <h2>ABOUT US</h2>
-           <div class="linea"></div>            
+           <div class="linea"></div>
         </div>
-    </div> 
+    </div>
     <div class="row">
         <div class="col-4 offset-2">
             <p></p>
@@ -37,20 +45,20 @@
         <div class="col-4 ">
             <img src="assets/img/agency-img3.jpg" alt="">
         </div>
-    </div>    
+    </div>
  </section>
-  
-<!--Termina Seccion 4 About Us Mone -->     
+
+<!--Termina Seccion 4 About Us Mone -->
 
 <!--Inicia Seccion 5 What we do Erandy -->
-  
+
 <!--Termina Seccion 5 What we do Erandy -->
 
  <!--Inicia Seccion 6 Prices Shazil -->
-     
-  
-<!--Termina Seccion 6 Prices Shazil -->    
- 
+
+
+<!--Termina Seccion 6 Prices Shazil -->
+
 <!--Inicia Seccion 6 texto y formulario Yessy -->
     <section class="parrafos container">
         <div class="row">
@@ -100,18 +108,35 @@
         <button class="button">submit</button>
         </div>
         <p>*Required</p>
-    </section>    
-<!--Termina Seccion 6 texto y formulario Yessy-->   
+    </section>
+<!--Termina Seccion 6 texto y formulario Yessy-->
 
 <!--Inicia Seccion 7  Imagenes trigo Silvana -->
-  
+
+    <section id="seccionRedes" class="seccion7">
+      <div class="container">
+        <div class="row centerGrid">
+          <div class="col-12">
+            <i class="fa fa-facebook-square" aria-hidden="true"></i>
+            <i class="fa fa-twitter-square" aria-hidden="true"></i>
+            <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+            <i class="fa fa-pinterest-square" aria-hidden="true"></i>
+            <i class="fa fa-google-plus-square" aria-hidden="true"></i>
+            <i class="fa fa-tumblr-square" aria-hidden="true"></i>
+            <i class="fa fa-instagram" aria-hidden="true"></i>
+          </div>
+        </div>
+      </div>
+
+    </section>
 <!--Termina Seccion 7 Imagenes trigo Silvana -->
 
 <!--Inicia Seccion 8  footer Clau -->
-  
-<!--Termina Seccion 8 footer Clau -->   
-   
-   
+
+<!--Termina Seccion 8 footer Clau -->
+
+
     <script src="assets/js/jquery-3.2.1.min.js"></script>
+    <script src="https://use.fontawesome.com/a52b638e62.js"></script>
 </body>
 </html>
