--- a/index.html
+++ b/index.html
@@ -18,6 +18,111 @@
 <!--Termina Seccion 2 Imagenes Silvana -->
 
 <!--Inicia Seccion 3 Colores Karla -->
+ 
+ <section class="container">
+     <div class="row">
+         <div class="col-8 offset-2">
+             <h2 class="colors__h2">PICK YOUR COLOR PALETTE</h2>
+         </div>
+         <div class="col-2 offset-5">
+             <hr>
+         </div>
+     </div>
+     <div class="row">
+         <div class="col-8 offset-2">
+             <div class="col-2 colors__div-colores colors--colores__uno">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+             <div class="col-2 colors__div-colores colors--colores__dos">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+             <div class="col-2 colors__div-colores colors--colores__tres">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+             <div class="col-2 colors__div-colores colors--colores__cuatro">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+             <div class="col-2 colors__div-colores colors--colores__cinco">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+         </div>
+     </div>
+     <div class="row">
+         <div class="col-8 offset-2">
+             <div class="col-2 colors__div-colores colors--colores__seis">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+             <div class="col-2 colors__div-colores colors--colores__siete">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+             <div class="col-2 colors__div-colores colors--colores__ocho">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+             <div class="col-2 colors__div-colores colors--colores__nueve">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+             <div class="col-2 colors__div-colores colors--colores__diez">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+         </div>
+     </div>
+     <div class="row">
+         <div class="col-8 offset-2">
+             <div class="col-2 colors__div-colores colors--colores__once">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+             <div class="col-2 colors__div-colores colors--colores__doce">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+             <div class="col-2 colors__div-colores colors--colores__trece">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+             <div class="col-2 colors__div-colores colors--colores__tres">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+             <div class="col-2 colors__div-colores colors--colores__quince">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+         </div>
+     </div>
+     <div class="row">
+         <div class="col-8 offset-2">
+             <div class="col-2 colors__div-colores colors--colores__diciseis">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+             <div class="col-2 colors__div-colores colors--colores__diecisiete">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+             <div class="col-2 colors__div-colores colors--colores__dieciocho">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+             <div class="col-2 colors__div-colores colors--colores__diecinueve">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+             <div class="col-2 colors__div-colores colors--colores__veinte">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+         </div>
+     </div>
+     <div class="row">
+         <div class="col-8 offset-2">
+             <div class="col-2 colors__div-colores colors--colores__veintiuno">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+             <div class="col-2 colors__div-colores colors--colores__veintidos">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+             <div class="col-2 colors__div-colores colors--colores__veintitres">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+             <div class="col-2 colors__div-colores colors--colores__veinticuatro">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+             <div class="col-2 colors__div-colores colors--colores__veinticinco">
+                 <p class="centerGrid negro">#f7eac8</p>
+             </div>
+         </div>
+     </div>
   
 <!--Termina Seccion 3 Colores Karla -->  
   
