--- a/index.html
+++ b/index.html
@@ -56,65 +56,71 @@
                 <div>
                 <p class="prices__texto col-12">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 </div>
-                 <div class="col-3">a</div>
-                 <div class="col-3">b</div>
-                 <div class="col-3">c</div>
-                 <div class="col-3">d</div>
-       </div>  
+                <div class="col-12">
+                     <div class="cajas-prices col-3">
+                                <h3 class="cajas-prices__starter">STARTER</h3>
+                                <div class="cajas-prices__verde">
+                                    <p><span>$10</span>/MO</p>
+                                    <p>1 month FREE trial</p>
+                                </div>
+                                <p>2 GB Disk Space</p>
+                                <p class="cajas-prices__blanco">10 GB Bandwith</p>
+                                <p>1 Databases</p>
+                                <p class="cajas-prices__blanco">Dayli Backup</p>
+                                <p>1 Domains</p>
+                                <p class="cajas-prices__blanco">24 Support</p>
+                                <button class="cajas-prices__button">Sign Up</button>
+                            </div>
+                       <div class="cajas-prices col-3">
+                                <h3 class="cajas-prices__starter">STARTER</h3>
+                                <div class="cajas-prices__verde">
+                                    <p><span>$10</span>/MO</p>
+                                    <p>1 month FREE trial</p>
+                                </div>
+                                <p>2 GB Disk Space</p>
+                                <p class="cajas-prices__blanco">10 GB Bandwith</p>
+                                <p>1 Databases</p>
+                                <p class="cajas-prices__blanco">Dayli Backup</p>
+                                <p>1 Domains</p>
+                                <p class="cajas-prices__blanco">24 Support</p>
+                                <button class="cajas-prices__button">Sign Up</button>
+                            </div>
+                       <div class="cajas-prices col-3">
+                                <h3 class="cajas-prices__starter">STARTER</h3>
+                                <div class="cajas-prices__verde">
+                                    <p><span>$10</span>/MO</p>
+                                    <p>1 month FREE trial</p>
+                                </div>
+                                <p>2 GB Disk Space</p>
+                                <p class="cajas-prices__blanco">10 GB Bandwith</p>
+                                <p>1 Databases</p>
+                                <p class="cajas-prices__blanco">Dayli Backup</p>
+                                <p>1 Domains</p>
+                                <p class="cajas-prices__blanco">24 Support</p>
+                                <button class="cajas-prices__button">Sign Up</button>
+                            </div>
+                       <div class="cajas-prices col-3">
+                                <h3 class="cajas-prices__starter">STARTER</h3>
+                                <div class="cajas-prices__verde">
+                                    <p><span>$10</span>/MO</p>
+                                    <p>1 month FREE trial</p>
+                                </div>
+                                <p>2 GB Disk Space</p>
+                                <p class="cajas-prices__blanco">10 GB Bandwith</p>
+                                <p>1 Databases</p>
+                                <p class="cajas-prices__blanco">Dayli Backup</p>
+                                <p>1 Domains</p>
+                                <p class="cajas-prices__blanco">24 Support</p>
+                                <button class="cajas-prices__button">Sign Up</button>
+                            </div>
+                </div>
+            </div>  
      </section>
   
 <!--Termina Seccion 6 Prices Shazil -->    
  
-<!--Inicia Seccion 6 texto y formulario Yessy -->
-    <section class="parrafos container">
-        <div class="row">
-            <div class="col-8 offset-2 titulo">
-                <h1>What your clients says</h1>
-            </div>
-        </div>
-        <div class="linea"></div>
-        <div class="row">
-            <div class="col-12 subtitulo">
-                <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-            </div>
-        <div class="row">
-            <p class="col">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ut, fuga architecto, autem libero neque quam obcaecati quaerat, incidunt nostrum, unde laborum aliquam et. Eveniet animi reiciendis ratione pariatur voluptate.
-            </p>
-        </div>
-        <div class="row">
-            <p class="col">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ut, fuga architecto, autem libero neque quam obcaecati quaerat, incidunt nostrum, unde laborum aliquam et. Eveniet animi reiciendis ratione pariatur voluptate.
-            </p>
-        </div>
-        <div class="row">
-            <p class="col">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus ut, fuga architecto, autem libero neque quam obcaecati quaerat, incidunt nostrum, unde laborum aliquam et. Eveniet animi reiciendis ratione pariatur voluptate.
-            </p>
-        </div>
-    </section>
-    <section class="formulario container">
-        <div class="row">
-            <div class="col-12 titulo">
-                <h1 class="titulo">GET IN TOUCH</h1>
-            </div>
-        </div>
-        <div class="linea"></div>
-        <div class="row">
-        <div class="col-12">
-            <h2 class="subtitulo">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-        </div>
-        <div class="row">
-        <form class="col">
-            <input type="text" placeholder="Name*">
-            <input type="text" placeholder="Email*">
-            <input type="text" placeholder="Phone*">
-            <textarea placeholder="Message*"></textarea>
-        </form>
-        <button class="button">submit</button>
-        </div>
-        <p>*Required</p>
-    </section>    
+ <!--Inicia Seccion 6 texto y formulario Yessy -->
+  
 <!--Termina Seccion 6 texto y formulario Yessy-->   
 
 <!--Inicia Seccion 7  Imagenes trigo Silvana -->
